overflow x fix #8

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -22,6 +22,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     font-family: 'Noto Sans JP', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
